WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223159
[JSC] wasm atomic wait offset is not index
https://bugs.webkit.org/show_bug.cgi?id=223159
Summary
[JSC] wasm atomic wait offset is not index
Yusuke Suzuki
Reported
2021-03-14 03:22:11 PDT
https://twitter.com/falessandrelli/status/1371035639668424708
Attachments
Patch
(7.22 KB, patch)
2021-03-14 04:17 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(7.75 KB, patch)
2021-03-14 04:41 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-03-14 04:17:33 PDT
Created
attachment 423124
[details]
Patch
Yusuke Suzuki
Comment 2
2021-03-14 04:41:45 PDT
Created
attachment 423125
[details]
Patch
Mark Lam
Comment 3
2021-03-14 08:39:12 PDT
Comment on
attachment 423125
[details]
Patch r=me
Yusuke Suzuki
Comment 4
2021-03-14 11:15:28 PDT
Comment on
attachment 423125
[details]
Patch Thanks!
EWS
Comment 5
2021-03-14 11:19:04 PDT
Committed
r274399
: <
https://commits.webkit.org/r274399
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423125
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-03-14 11:20:16 PDT
<
rdar://problem/75409615
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug